# election-gender-bias_D4W

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
airflow/dags/: daily_news_collection_dag.py  gdelt_backfill_dag.py
docs/: architecture.md  data-model.md  news_source_benchmark_cases.yaml  news_source_policy_shortlist.yaml
notebooks/: 02_source_schema_exploration.ipynb
scripts/: run_daily_news_collection.py  run_gdelt_backfill.py  run_news_benchmark.py  run_sampling_pipeline.py
src/: __init__.py
src/cli/: __init__.py  run_gdelt_backfill.py  run_news_benchmark.py  run_sampling_pipeline.py
src/config/: news_outlets.py  settings.py
src/ingest/: _base.py  candidates.py  geography.py  incumbents.py  seats.py
src/ingest/news/: __init__.py  benchmark.py  models.py  normalize.py  pipeline.py  queries.py  storage.py
src/ingest/news/providers/: __init__.py  curated.py  gdelt.py  gnews.py
src/observability/: run_logger.py
src/orchestration/: __init__.py  gdelt_backfill_pipeline.py  news_benchmark_pipeline.py  sampling_pipeline.py
src/transform/: _exceptions.py  dim_candidate.py  dim_commune.py  sampling.py
tests/: conftest.py  test_cli.py  test_gdelt_backfill.py  test_ingest.py  test_news_benchmark.py  test_pipeline.py  test_sampling.py  test_transform.py
